--- a/Server/package.json
+++ b/Server/package.json
@@ -16,6 +16,7 @@
     "express-fileupload": "^1.4.0",
     "formidable": "^2.0.1",
     "fs": "0.0.1-security",
+    "fs-extra": "^10.1.0",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
